--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olhos do bem, o principal programa social de testes visuais gratuitos do Brasil!">
     <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/mediaquery.css">
     <script src="./script/navbar.js" defer></script>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
@@ -15,7 +17,7 @@
 <body>
     
 
-<div class="header">
+  <div class="header">
     <div class="logo">
         <img class="mobilelogo" src="assets/img/logo.png" alt="logo olhos do bem" width="20%">
     </div>
@@ -32,11 +34,40 @@
   <div id="navbar" class="navbar">
     
     <div class="logomenu"><img src="assets/img/logo.png" alt="logo projeto olhos do bem" width="60px"></div>
+  
+    <div class="menuitems">
     <a href="#">Sobre</a>
     <a href="javascript:void(0)">Cidades</a>
     <a href="#" class="active">Agendar</a>
+    </div>
   </div>
+
+  <section class="sobre">
+        <p>Visão Saudável, Compromisso Social Com o Olhos do Bem, priorizamos o cuidado com a saúde ocular e o compromisso social. Nosso objetivo é proporcionar testes visuais de qualidade, acessíveis a todos, promovendo a visão de um futuro mais claro e inclusivo.</p>
+  </section>
+
+  <section class="comofunciona">
+    <h3>Como funciona?</h3>
+    O processo no OLHOS DO BEM é simples e eficiente. O agendamento é fácil e rápido, garantindo que você seja atendido(a) em menos de 10 dias.
+
+    Acreditamos que todos merecem cuidados visuais de qualidade, e é por isso que oferecemos nossos serviços de forma 100% GRATUITA.
+
+  </section>  
   
+  <section class="beneficios"></section>
+
+  <section class="cidadesatendidas">
+    <p>cotia</p>
+    <p>itapevi</p>
+    <p>vargem grande</p>
+    <p>osasco</p>
+  </section>
+  
+  <section class="depoimentos">
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+  </section>
  
   
 </body>
