--- a/index.html
+++ b/index.html
@@ -56,8 +56,14 @@
   </section>  
   
   <section class="beneficios">
+    <div class="titulosbeneficios"> <p class="pq"> Por que Olhos do Bem?</p></div>
 
-    d
+    <div class="cartoes">
+      <div class="cardbottom"><p><span class="s1">Comprometimento</span> com a Saúde Ocular</p></div>
+      <div class="cardbottom"><p>Agendamento <span class="s2">Rápido</span> e Conveniente</p></div>
+      <div class="cardbottom"><p>Atendimento em <span class="s3">Menos de 10 Dias</span></p></div>
+      <div class="cardbottom"><p><span class="s4">100% Gratuito</span> e Acessível</p></div>
+    </div>
   </section>
 
   <section class="cidadesatendidas">
@@ -127,9 +133,7 @@
   </section>
   
   <section class="depoimentos">
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
+
   </section>
  
   
@@ -138,7 +142,7 @@
 <footer>
 
     <div class="containerfooter">
-        <div class="fim"> <img src="assets/img/logo.png" alt="logotipo olhos do bem" width="80px">  <p>olhos do bem o maior programa de testes visuais gratuitos do Brasil</p></div> 
+        <div class="fim"> <img src="assets/img/logo.png" alt="logotipo olhos do bem" width="80px">  <p>Olhos do bem o maior programa de testes visuais gratuitos do Brasil.</p></div> 
         
         <div class="menufooter">
 
