--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
   </section>  
   
   <section class="beneficios">
-    <div class="titulosbeneficios"> <p class="pq"> Por que Olhos do Bem?</p></div>
+    <div class="titulosbeneficios"> <p class="pq"> Por que Olhos do Bem?</p> <p>Conheça os nossos benefícios e saiba como podemos te ajudar.
+
+    </p></div>
 
     <div class="cartoes">
-      <div class="cardbottom"><p><span class="s1">Comprometimento</span> com a Saúde Ocular</p></div>
-      <div class="cardbottom"><p>Agendamento <span class="s2">Rápido</span> e Conveniente</p></div>
-      <div class="cardbottom"><p>Atendimento em <span class="s3">Menos de 10 Dias</span></p></div>
-      <div class="cardbottom"><p><span class="s4">100% Gratuito</span> e Acessível</p></div>
+      <div class="cardbottom"> <img src="assets/img/eye-care.png" alt="olhos" width="50px"><p><span class="s1">Comprometimento</span> com a Saúde Ocular</p></div>
+      <div class="cardbottom"><img src="assets/img/clock.png" alt="rapido" width="50px"><p>Agendamento <span class="s2">Rápido</span> e Conveniente</p></div>
+      <div class="cardbottom"><img src="assets/img/schedule.png" alt="" width="50px"><p>Atendimento em <span class="s3">Menos de 10 Dias</span></p></div>
+      <div class="cardbottom"><img src="assets/img/tax-free.png" alt="" width="50px"><p><span class="s4">100% Gratuito</span> e Acessível</p></div>
     </div>
   </section>
 
@@ -173,8 +175,6 @@
         <div class="rodape">
         &#169  <script> document.write(new Date().getFullYear());</script>
         TODOS OS DIREITOS RESERVADOS
-        <p class="madeby">Made by <a class="kei" href="https://www.linkedin.com/in/keisyalves/" target="_blank">kei</a></p>
-
         </div>
 
         </div>
