--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/mediaquery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" />
     <script src="./script/navbar.js" defer></script>
+    <script src="./script/script.js" defer></script>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     
     <title>Olhos do bem | Exames de Vista Gratuitos</title>
@@ -44,6 +45,8 @@
     <a href="#" class="active">Agendar</a>
     </div>
   </div>
+
+  <div class="space"></div>
 
   <section class="comofunciona">
     <h3>Como funciona?</h3>
@@ -134,7 +137,7 @@
 
     
   </section>
-
+  
 </body>
 
 <footer>
